update chair shop web

--- a/chair-shop/index.html
+++ b/chair-shop/index.html
@@ -100,7 +100,7 @@
       </section>
       <section class="testimonial-section">
         <div class="grid-3-columns">
-          <img src="images/testimoni.jpg" width="240" alt="testimonial" />
+          <img class="testimoni-img" src="images/testimoni.jpg" width="240" alt="testimonial" />
           <blockquote>
             <h2>"We couldn't live without these chairs anymore"</h2>
             <p class="quote">
